fixed some annoying layout issues

--- a/stylesheets/blocks.css
+++ b/stylesheets/blocks.css
@@ -61,6 +61,8 @@
   white-space: nowrap;
   cursor: pointer;
   min-width: 75px;
+  float: left;
+  clear: left;
 }
 
 .expression.block{
@@ -189,7 +191,7 @@
   margin-left: 10px;
   margin-bottom: 0;
   padding-bottom: 10px;
-  overflow: visible;
+  overflow: auto;
   -webkit-border-top-left-radius: 10px;
   -webkit-border-bottom-left-radius: 10px;
   -moz-border-radius-topleft: 10px;
@@ -287,6 +289,10 @@
 .block.scripts_workspace > .label > .block-menu {
     border: 1px solid black;
     border-radius: 5px;
+}
+
+.block.scripts_workspace:after{
+  content: none;
 }
 
 
